--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,12 +6,14 @@
         <item name="colorPrimaryVariant">#1b4156</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondary">#18384a</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
+        <item name="android:calendarTextColor" tools:targetApi="l">@color/white</item>
         <!-- Customize your theme here. -->
+        <item name = "colorControlNormal">#989797</item>
     </style>
 
     <style name="Theme.Mobile_Interactions_Aaron_Soggi.NoActionBar">
@@ -22,5 +24,18 @@
     <style name="Theme.Mobile_Interactions_Aaron_Soggi.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.Mobile_Interactions_Aaron_Soggi.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="CalenderViewCustom" parent="Theme.AppCompat">
+        <item name="colorAccent">#18384a</item>
+        <item name="colorPrimary">#18384a</item>
+    </style>
+
+    <style name="CalenderViewDateCustomText" parent="android:TextAppearance.DeviceDefault.Small">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:weekNumberColor">@color/white</item>
+    </style>
+
+    <style name="CalenderViewWeekCustomText" parent="android:TextAppearance.DeviceDefault.Small">
+        <item name="android:textColor">@color/white</item>
+    </style>
 
 </resources>
